<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="15dp">

    <TextView
        android:id="@+id/del_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/del_msg"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/gray1"
        app:layout_constraintBaseline_toBaselineOf="@+id/confirm_del"
        app:layout_constraintEnd_toStartOf="@+id/confirm_del" />

    <Button
        android:id="@+id/confirm_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/gray2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/del_msg" />
</androidx.constraintlayout.widget.ConstraintLayout>